--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/GDD2022_Shmup.loader.js";
       var config = {
-        dataUrl: buildUrl + "/GDD2022_Shmup.data.br",
-        frameworkUrl: buildUrl + "/GDD2022_Shmup.framework.js.br",
-        codeUrl: buildUrl + "/GDD2022_Shmup.wasm.br",
+        dataUrl: buildUrl + "/GDD2022_Shmup.data",
+        frameworkUrl: buildUrl + "/GDD2022_Shmup.framework.js",
+        codeUrl: buildUrl + "/GDD2022_Shmup.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Rippr Studios",
         productName: "2D_Shmup_2022",
